--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main-styles.css">
     <!-- HERE IS THE FAVICON in the "href" attribute, specify the path to the favicon -->
     <link rel="icon" type="image/x-icon" href="img/logo.png">
-    <!-- Here you specify the TITLE THAT WILL BE DISPLAYED IN THE BROWSER tab next to the favicon -->
+    <!-- Here you specify the TITLE THAT WILL BE DISPLAYED IN THE BROWSER TAB next to the favicon -->
     <title>Skyra</title>
 
 </head>
@@ -378,28 +378,28 @@
                 <nav class="menu-footer">
                     <ul class="menu-footer__list">
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">Privacy Policy</a>
+                            <a href="privacy-policy.html" target="_blank" class="menu-footer__link">Privacy Policy</a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">Terms of Use</a>
+                            <a href="terms.html" target="_blank" class="menu-footer__link">Terms of Use</a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">IP Rights</a>
+                            <a href="ip-rights.html" target="_blank" class="menu-footer__link">IP Rights</a>
                         </li>
                     </ul>
                     <ul class="menu-footer__social-list">
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">
+                            <a href="" target="_blank" class="menu-footer__link">
                                 <img src="img/social-icons/social-icon_01.png" alt="social-icon">
                             </a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">
+                            <a href="" target="_blank" class="menu-footer__link">
                                 <img src="img/social-icons/social-icon_02.png" alt="social-icon">
                             </a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href="" class="menu-footer__link">
+                            <a href="" target="_blank" class="menu-footer__link">
                                 <img src="img/social-icons/social-icon_03.png" alt="social-icon">
                             </a>
                         </li>
