--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -71,28 +71,28 @@
 				<nav class="menu-footer">
 					<ul class="menu-footer__list">
 						<li class="menu-footer__item">
-							<a href="privacy-policy.html" target="_blank" class="menu-footer__link">Privacy Policy</a>
+							<a href="privacy-policy.html"  class="menu-footer__link">Privacy Policy</a>
 						</li>
 						<li class="menu-footer__item">
-							<a href="terms.html" target="_blank" class="menu-footer__link">Terms of Use</a>
+							<a href="terms.html"  class="menu-footer__link">Terms of Use</a>
 						</li>
 						<li class="menu-footer__item">
-							<a href="ip-rights.html" target="_blank" class="menu-footer__link">IP Rights</a>
+							<a href="ip-rights.html"  class="menu-footer__link">IP Rights</a>
 						</li>
 					</ul>
 					<ul class="menu-footer__social-list">
 						<li class="menu-footer__item">
-							<a href="" target="_blank" class="menu-footer__link">
+							<a href=""  class="menu-footer__link">
 								<img src="img/social-icons/social-icon_01.png" alt="social-icon">
 							</a>
 						</li>
 						<li class="menu-footer__item">
-							<a href="" target="_blank" class="menu-footer__link">
+							<a href=""  class="menu-footer__link">
 								<img src="img/social-icons/social-icon_02.png" alt="social-icon">
 							</a>
 						</li>
 						<li class="menu-footer__item">
-							<a href="" target="_blank" class="menu-footer__link">
+							<a href=""  class="menu-footer__link">
 								<img src="img/social-icons/social-icon_03.png" alt="social-icon">
 							</a>
 						</li>
