--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- HERE HEADER OF PAGE -->
         <header class="header">
             <div class="header__container">
-                <a href="" class="header__logo">
+                <a href="" class="header__logo --main-page-logo">
                     <!-- HER LOGO, NOW IT'S JUST TEXT -->
                     <!-- In the "font-size" style, specify the font size. In the "font-family" style, specify which font you want to use. -->
                     <span style="font-size: 30px; font-family: Courier, New, sans-serif;">Skyra</span>
