--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 </head>
 
-<body>
+<body class="--main-page">
     <div class="wrapper">
 
         <!-- HERE HEADER OF PAGE -->
         <header class="header">
             <div class="header__container">
-                <a href="" class="header__logo --main-page-logo">
+                <a href="" class="header__logo">
                     <!-- HER LOGO, NOW IT'S JUST TEXT -->
                     <!-- In the "font-size" style, specify the font size. In the "font-family" style, specify which font you want to use. -->
                     <span style="font-size: 30px; font-family: Courier, New, sans-serif;">Skyra</span>
