--- a/terms.html
+++ b/terms.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body >
 	<div class="wrapper">
 
 		<!-- HERE HEADER OF PAGE -->
@@ -71,10 +71,10 @@
 				<nav class="menu-footer">
 					<ul class="menu-footer__list">
 						<li class="menu-footer__item">
-							<a href="privacy-policy.html"  class="menu-footer__link">Terms to Use</a>
+							<a href="privacy-policy.html"  class="menu-footer__link">Privacy Policy</a>
 						</li>
 						<li class="menu-footer__item">
-							<a href="terms.html"  class="menu-footer__link">Terms to Use of Use</a>
+							<a href="terms.html"  class="menu-footer__link">Terms to Use</a>
 						</li>
 						<li class="menu-footer__item">
 							<a href="ip-rights.html"  class="menu-footer__link">IP Rights</a>
