--- a/index.html
+++ b/index.html
@@ -358,7 +358,143 @@
                     </div>
                 </div>
                 <!-- THIS IS END OF THE SECTION -->
+                <br>
+                <br>
+                <div data-section="Columns and rows" class="section">
+                    <h3 class="section__title">Columns and rows</h3>
+                    <br>
+                    <!-- THIS IS SUB-SECTION OF THE PAGE -->
+                    <!-- in the "data-subsection" attribute, write the text that will be displayed in the header as a link to this sub-section and will scroll when you click on it -->
+                    <div data-subsection="Rows">
+                        <!-- THIS IS TITLE OF SUBSECTION -->
+                        <h4 class="section__subsection-title">Rows</h4>
+                        <br>
+                        <!-- THIS ROW-SECTION -->
+                        <!-- to change the direction (picture on the right and text on the left), add "reverse" to the "class" attribute  -->
+                        <div class="rows-section">
+                            <div class="rows-section__image">
+                                <!-- THIS IS IMAGE -->
+                                <!-- In styles, you can use the "max-width" optionto set the width of the image in pixels. To align
+                                                                        it, use the following
+                                                                        properties:
+                                                                        to align the image to the left edge: "margin-right: auto;",
+                                                                        to align the image in the center: "margin: 0 auto;",
+                                                                        to align the image to the right edge: "margin-left: auto;". -->
+                                <img src="img/page-content/page-content-image_01.jpg" alt="image">
+                            </div>
+                            <div class="rows-section__info">
+                                <!-- THIS IS ROWS TITLE -->
+                                <h4 class="rows-section__title">
+                                    Rows Title
+                                </h4>
+                                <!-- THIS IS ROWS SUBTITLE (OPTIONAL) -->
+                                <div class="rows-section__subtitle">Lorem ipsum dolor sit amet.</div>
+                                <br>
+                                <!-- THIS ROWS TEXT -->
+                                <div class="rows-section__text">
+                                    <!-- the "p" tag is a regular paragraph of text -->
+                                    <p>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rerum incidunt
+                                        laborum excepturi velit sit
+                                        amet ea quo officia, saepe dolore accusantium ut reprehenderit sed repellat
+                                        cupiditate consequatur
+                                        tenetur praesentium!
+                                    </p>
+                                    <br>
+                                    <!-- the "p" tag is a regular paragraph of text -->
+                                    <p>
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur impedit
+                                        voluptas velit quos
+                                        eveniet perferendis vitae quisquam reiciendis aliquid, tempora culpa cupiditate
+                                        numquam, aperiam, dolor
+                                        minus. Vel eum quos natus.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                    <!-- THIS IS SUB-SECTION OF THE PAGE -->
+                    <!-- in the "data-subsection" attribute, write the text that will be displayed in the header as a link to this sub-section and will scroll when you click on it -->
+                    <div data-subsection="Columns">
+                        <!-- THIS IS TITLE OF SUBSECTION -->
+                        <h4 class="section__subsection-title">Columns</h4>
+                        <br>
+                        <!-- THIS ROW-SECTION -->
+                        <!-- to change the direction (picture on the right and text on the left), add "reverse" to the "class" attribute  -->
+                        <div class="columns-section">
+                            <!-- THIS IS COLUMN -->
+                            <article class="columns-section__column">
+                                <!-- THIS IS COLUM-SECTION ICON (OPTIONAL) -->
+                                <div class="columns-section__icon">
+                                    <!-- In the "src" attribute, specify the path to the image. In the "alt" attribute, specify a short description of the picture (optional) -->
+                                    <img src="img/social-icons/social-icon_01.png" alt="social-icon">
+                                </div>
+                                <div class="columns-section__bottom">
+                                    <!-- THIS IS TITLE OF COLUMN SECTION -->
+                                    <h5 class="columns-section__title">Lorem, ipsum dolor.</h5>
+                                    <!-- THIS IS TEXT OF COLUMN SECTION -->
+                                    <div class="columns-section__text">
+                                        <!-- the "p" tag is a regular paragraph of text -->
+                                        <p>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos atque at illo
+                                            ipsum maiores quod! Aspernatur, doloribus sed illum deserunt commodi
+                                            sapiente voluptatum, beatae saepe optio animi quaerat, aut similique!
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                            <!-- THIS IS COLUMN -->
+                            <article class="columns-section__column">
+                                <!-- THIS IS COLUM-SECTION ICON (OPTIONAL) -->
+                                <div class="columns-section__icon">
+                                    <!-- In the "src" attribute, specify the path to the image. In the "alt" attribute, specify a short description of the picture (optional) -->
+                                    <img src="img/social-icons/social-icon_02.png" alt="social-icon">
+                                </div>
+                                <div class="columns-section__bottom">
+                                    <!-- THIS IS TITLE OF COLUMN SECTION -->
+                                    <h5 class="columns-section__title">Lorem, ipsum dolor.</h5>
+                                    <!-- THIS IS TEXT OF COLUMN SECTION -->
+                                    <div class="columns-section__text">
+                                        <!-- the "p" tag is a regular paragraph of text -->
+                                        <p>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos atque at illo
+                                            ipsum maiores quod!
+                                            Aspernatur, doloribus sed illum deserunt commodi sapiente voluptatum, beatae
+                                            saepe optio animi quaerat,
+                                            aut similique!
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                            <!-- THIS IS COLUMN -->
+                            <article class="columns-section__column">
+                                <!-- THIS IS COLUM-SECTION ICON (OPTIONAL) -->
+                                <div class="columns-section__icon">
+                                    <!-- In the "src" attribute, specify the path to the image. In the "alt" attribute, specify a short description of the picture (optional) -->
+                                    <img src="img/social-icons/social-icon_03.png" alt="social-icon">
+                                </div>
+                                <div class="columns-section__bottom">
+                                    <!-- THIS IS TITLE OF COLUMN SECTION -->
+                                    <h5 class="columns-section__title">Lorem, ipsum dolor.</h5>
+                                    <!-- THIS IS TEXT OF COLUMN SECTION -->
+                                    <div class="columns-section__text">
+                                        <!-- the "p" tag is a regular paragraph of text -->
+                                        <p>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos atque at illo
+                                            ipsum maiores quod!
+                                            Aspernatur, doloribus sed illum deserunt commodi sapiente voluptatum, beatae
+                                            saepe optio animi quaerat,
+                                            aut similique!
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
 
+                </div>
 
                 <!-- PUT BEFORE THIS LABEL NEW SECTION -->
                 <br>
@@ -378,28 +514,28 @@
                 <nav class="menu-footer">
                     <ul class="menu-footer__list">
                         <li class="menu-footer__item">
-                            <a href="privacy-policy.html"  class="menu-footer__link">Privacy Policy</a>
+                            <a href="privacy-policy.html" class="menu-footer__link">Privacy Policy</a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href="terms.html"  class="menu-footer__link">Terms of Use</a>
+                            <a href="terms.html" class="menu-footer__link">Terms of Use</a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href="ip-rights.html"  class="menu-footer__link">IP Rights</a>
+                            <a href="ip-rights.html" class="menu-footer__link">IP Rights</a>
                         </li>
                     </ul>
                     <ul class="menu-footer__social-list">
                         <li class="menu-footer__item">
-                            <a href=""  class="menu-footer__link">
+                            <a href="" class="menu-footer__link">
                                 <img src="img/social-icons/social-icon_01.png" alt="social-icon">
                             </a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href=""  class="menu-footer__link">
+                            <a href="" class="menu-footer__link">
                                 <img src="img/social-icons/social-icon_02.png" alt="social-icon">
                             </a>
                         </li>
                         <li class="menu-footer__item">
-                            <a href=""  class="menu-footer__link">
+                            <a href="" class="menu-footer__link">
                                 <img src="img/social-icons/social-icon_03.png" alt="social-icon">
                             </a>
                         </li>
