--- a/index.html
+++ b/index.html
@@ -421,8 +421,7 @@
                         <!-- THIS IS TITLE OF SUBSECTION -->
                         <h4 class="section__subsection-title">Columns</h4>
                         <br>
-                        <!-- THIS ROW-SECTION -->
-                        <!-- to change the direction (picture on the right and text on the left), add "reverse" to the "class" attribute  -->
+                        <!-- THIS COLUMN-SECTION -->
                         <div class="columns-section">
                             <!-- THIS IS COLUMN -->
                             <article class="columns-section__column">
