--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <br>
                 <!-- THIS IS SECTION OF THE PAGE -->
                 <!-- in the "data-section" attribute, write the text that will be displayed in the header as a link to this section and will scroll when you click on it -->
-                <div data-section="Welcome to Skyra" class="section">
+                <div data-section="Egg Yegg" class="section">
                     <!-- this title of section -->
-                    <h3 class="section__title">Welcome to Skyra</h3>
+                    <h3 class="section__title">Welcome to Egg Yegg</h3>
                     <!--the "br" tag is a downward indent with its help you can adjust the distance between elements (the more <br> tags, the greater the distance)  -->
                     <br>
                     <!-- the "p" tag is a regular paragraph of text -->
