--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <!-- in the "data-section" attribute, write the text that will be displayed in the header as a link to this section and will scroll when you click on it -->
                 <div data-section="Egg Yegg" class="section">
                     <!-- this title of section -->
-                    <h3 class="section__title">Egg Yegg</h3>
+                    <h3 class="section__title">yEgg</h3>
                     <!--the "br" tag is a downward indent with its help you can adjust the distance between elements (the more <br> tags, the greater the distance)  -->
                     <br>
                     <!-- the "p" tag is a regular paragraph of text -->
